// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchStatsFromGA helper functions requestBodyBuilder should return right request body for different source and doc types: LINE_article_useContentGroup=false 1`] = `
Object {
  "dateRanges": Array [
    Object {
      "endDate": "today",
      "startDate": "2020-07-10",
    },
  ],
  "dimensions": Array [
    Object {
      "name": "ga:eventLabel",
    },
    Object {
      "name": "ga:date",
    },
  ],
  "filtersExpression": "ga:eventCategory==Article;ga:eventAction==Selected",
  "includeEmptyRows": false,
  "metrics": Array [
    Object {
      "expression": "ga:hits",
    },
    Object {
      "expression": "ga:users",
    },
  ],
  "orderBys": Array [
    Object {
      "fieldName": "ga:date",
    },
    Object {
      "fieldName": "ga:eventLabel",
    },
  ],
  "pageSize": "10000",
  "pageToken": "",
  "viewId": "987654321",
}
`;

exports[`fetchStatsFromGA helper functions requestBodyBuilder should return right request body for different source and doc types: LINE_article_useContentGroup=true 1`] = `
Object {
  "dateRanges": Array [
    Object {
      "endDate": "today",
      "startDate": "today",
    },
  ],
  "dimensions": Array [
    Object {
      "name": "ga:eventLabel",
    },
    Object {
      "name": "ga:date",
    },
  ],
  "filtersExpression": "ga:eventCategory==Article;ga:eventAction==Selected",
  "includeEmptyRows": false,
  "metrics": Array [
    Object {
      "expression": "ga:hits",
    },
    Object {
      "expression": "ga:users",
    },
  ],
  "orderBys": Array [
    Object {
      "fieldName": "ga:date",
    },
    Object {
      "fieldName": "ga:eventLabel",
    },
  ],
  "pageSize": "10000",
  "pageToken": "",
  "viewId": "987654321",
}
`;

exports[`fetchStatsFromGA helper functions requestBodyBuilder should return right request body for different source and doc types: LINE_reply_useContentGroup=false 1`] = `
Object {
  "dateRanges": Array [
    Object {
      "endDate": "today",
      "startDate": "2020-07-10",
    },
  ],
  "dimensions": Array [
    Object {
      "name": "ga:eventLabel",
    },
    Object {
      "name": "ga:date",
    },
  ],
  "filtersExpression": "ga:eventCategory==Reply;ga:eventAction==Selected",
  "includeEmptyRows": false,
  "metrics": Array [
    Object {
      "expression": "ga:hits",
    },
    Object {
      "expression": "ga:users",
    },
  ],
  "orderBys": Array [
    Object {
      "fieldName": "ga:date",
    },
    Object {
      "fieldName": "ga:eventLabel",
    },
  ],
  "pageSize": "10000",
  "pageToken": "",
  "viewId": "987654321",
}
`;

exports[`fetchStatsFromGA helper functions requestBodyBuilder should return right request body for different source and doc types: LINE_reply_useContentGroup=true 1`] = `
Object {
  "dateRanges": Array [
    Object {
      "endDate": "today",
      "startDate": "today",
    },
  ],
  "dimensions": Array [
    Object {
      "name": "ga:eventLabel",
    },
    Object {
      "name": "ga:date",
    },
  ],
  "filtersExpression": "ga:eventCategory==Reply;ga:eventAction==Selected",
  "includeEmptyRows": false,
  "metrics": Array [
    Object {
      "expression": "ga:hits",
    },
    Object {
      "expression": "ga:users",
    },
  ],
  "orderBys": Array [
    Object {
      "fieldName": "ga:date",
    },
    Object {
      "fieldName": "ga:eventLabel",
    },
  ],
  "pageSize": "10000",
  "pageToken": "",
  "viewId": "987654321",
}
`;

exports[`fetchStatsFromGA helper functions requestBodyBuilder should return right request body for different source and doc types: WEB_article_useContentGroup=false 1`] = `
Object {
  "dateRanges": Array [
    Object {
      "endDate": "today",
      "startDate": "2020-07-10",
    },
  ],
  "dimensions": Array [
    Object {
      "name": "ga:pagePathLevel2",
    },
    Object {
      "name": "ga:date",
    },
  ],
  "filtersExpression": "ga:pagePathLevel1==/article/",
  "includeEmptyRows": false,
  "metrics": Array [
    Object {
      "expression": "ga:pageviews",
    },
    Object {
      "expression": "ga:users",
    },
  ],
  "orderBys": Array [
    Object {
      "fieldName": "ga:date",
    },
    Object {
      "fieldName": "ga:pagePathLevel2",
    },
  ],
  "pageSize": "10000",
  "pageToken": "",
  "viewId": "123456789",
}
`;

exports[`fetchStatsFromGA helper functions requestBodyBuilder should return right request body for different source and doc types: WEB_article_useContentGroup=true 1`] = `
Object {
  "dateRanges": Array [
    Object {
      "endDate": "today",
      "startDate": "today",
    },
  ],
  "dimensions": Array [
    Object {
      "name": "ga:contentGroup1",
    },
    Object {
      "name": "ga:date",
    },
  ],
  "filtersExpression": "ga:pagePathLevel1==/article/",
  "includeEmptyRows": false,
  "metrics": Array [
    Object {
      "expression": "ga:pageviews",
    },
    Object {
      "expression": "ga:users",
    },
  ],
  "orderBys": Array [
    Object {
      "fieldName": "ga:date",
    },
    Object {
      "fieldName": "ga:contentGroup1",
    },
  ],
  "pageSize": "10000",
  "pageToken": "",
  "viewId": "123456789",
}
`;

exports[`fetchStatsFromGA helper functions requestBodyBuilder should return right request body for different source and doc types: WEB_reply_useContentGroup=false 1`] = `
Object {
  "dateRanges": Array [
    Object {
      "endDate": "today",
      "startDate": "2020-07-10",
    },
  ],
  "dimensions": Array [
    Object {
      "name": "ga:pagePathLevel2",
    },
    Object {
      "name": "ga:date",
    },
  ],
  "filtersExpression": "ga:pagePathLevel1==/reply/",
  "includeEmptyRows": false,
  "metrics": Array [
    Object {
      "expression": "ga:pageviews",
    },
    Object {
      "expression": "ga:users",
    },
  ],
  "orderBys": Array [
    Object {
      "fieldName": "ga:date",
    },
    Object {
      "fieldName": "ga:pagePathLevel2",
    },
  ],
  "pageSize": "10000",
  "pageToken": "",
  "viewId": "123456789",
}
`;

exports[`fetchStatsFromGA helper functions requestBodyBuilder should return right request body for different source and doc types: WEB_reply_useContentGroup=true 1`] = `
Object {
  "dateRanges": Array [
    Object {
      "endDate": "today",
      "startDate": "today",
    },
  ],
  "dimensions": Array [
    Object {
      "name": "ga:contentGroup1",
    },
    Object {
      "name": "ga:date",
    },
  ],
  "filtersExpression": "ga:pagePathLevel1==/reply/",
  "includeEmptyRows": false,
  "metrics": Array [
    Object {
      "expression": "ga:pageviews",
    },
    Object {
      "expression": "ga:users",
    },
  ],
  "orderBys": Array [
    Object {
      "fieldName": "ga:date",
    },
    Object {
      "fieldName": "ga:contentGroup1",
    },
  ],
  "pageSize": "10000",
  "pageToken": "",
  "viewId": "123456789",
}
`;

exports[`fetchStatsFromGA helper functions storeScriptInDB should store upsert script in db 1`] = `
Object {
  "_id": "analyticsUpsertScript",
  "found": true,
  "script": Object {
    "lang": "painless",
    "source": "
  if (ctx._source.size() == 0 || ctx._source.stats.size() == 0) {
    ctx._source.stats = params.stats;
  } else {
    ctx._source.stats.putAll(params.stats)
  }
  if (params.docUserId != null) {
    ctx._source.docUserId = params.docUserId;
  }
  if (params.docAppId != null) {
    ctx._source.docAppId = params.docAppId;
  }
  ctx._source.fetchedAt = params.fetchedAt;
  ctx._source.date = params.date;
  ctx._source.docId = params.docId;
  ctx._source.type = params.type;
",
  },
}
`;

exports[`fetchStatsFromGA processReport with stubbed upsertDocStats should aggregate rows of data 1`] = `
Object {
  "date": "2020-07-15T00:00:00.000+08:00",
  "docAppId": undefined,
  "docId": "testID5",
  "docType": "article",
  "docUserId": undefined,
  "sourceType": "WEB",
  "stats": Object {
    "webUser": 46,
    "webVisit": 109,
  },
}
`;

exports[`fetchStatsFromGA processReport with stubbed upsertDocStats should aggregate rows of data 2`] = `
Array [
  "article_testID1_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID1",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 1,
      "webVisit": 2,
    },
    "type": "article",
  },
  "article_testID2_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID2",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 2,
      "webVisit": 40,
    },
    "type": "article",
  },
  "article_testID3_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID3",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 2,
      "webVisit": 5,
    },
    "type": "article",
  },
  "article_testID4_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID4",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 25,
      "webVisit": 69,
    },
    "type": "article",
  },
  "article_testID5_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID5",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 46,
      "webVisit": 109,
    },
    "type": "article",
  },
]
`;

exports[`fetchStatsFromGA processReport with stubbed upsertDocStats should aggregate rows of data cross pages 1`] = `
Object {
  "date": "2020-07-15T00:00:00.000+08:00",
  "docAppId": undefined,
  "docId": "testID5",
  "docType": "article",
  "docUserId": undefined,
  "sourceType": "WEB",
  "stats": Object {
    "webUser": 46,
    "webVisit": 109,
  },
}
`;

exports[`fetchStatsFromGA processReport with stubbed upsertDocStats should aggregate rows of data cross pages 2`] = `
Array [
  "article_testID1_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID1",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 5,
      "webVisit": 20,
    },
    "type": "article",
  },
  "article_testID2_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID2",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 2,
      "webVisit": 40,
    },
    "type": "article",
  },
  "article_testID3_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID3",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 2,
      "webVisit": 5,
    },
    "type": "article",
  },
  "article_testID4_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID4",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 25,
      "webVisit": 69,
    },
    "type": "article",
  },
  "article_testID5_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID5",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 46,
      "webVisit": 109,
    },
    "type": "article",
  },
]
`;

exports[`fetchStatsFromGA processReport with stubbed upsertDocStats should aggregate rows of data cross pages 3`] = `
Object {
  "date": "2020-07-16T00:00:00.000+08:00",
  "docAppId": undefined,
  "docId": "testID5",
  "docType": "article",
  "docUserId": undefined,
  "sourceType": "WEB",
  "stats": Object {
    "webUser": 4,
    "webVisit": 10,
  },
}
`;

exports[`fetchStatsFromGA processReport with stubbed upsertDocStats should aggregate rows of data cross pages 4`] = `
Array [
  "article_testID5_2020-07-15",
  Object {
    "date": "2020-07-15T00:00:00.000+08:00",
    "docId": "testID5",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 49,
      "webVisit": 115,
    },
    "type": "article",
  },
  "article_testID1_2020-07-16",
  Object {
    "date": "2020-07-16T00:00:00.000+08:00",
    "docId": "testID1",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 1,
      "webVisit": 2,
    },
    "type": "article",
  },
  "article_testID2_2020-07-16",
  Object {
    "date": "2020-07-16T00:00:00.000+08:00",
    "docId": "testID2",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 1,
      "webVisit": 2,
    },
    "type": "article",
  },
  "article_testID5_2020-07-16",
  Object {
    "date": "2020-07-16T00:00:00.000+08:00",
    "docId": "testID5",
    "fetchedAt": 2020-01-01T00:00:00.000Z,
    "stats": Object {
      "webUser": 4,
      "webVisit": 10,
    },
    "type": "article",
  },
]
`;

exports[`fetchStatsFromGA processReport with stubbed upsertDocStats should call bulkUpdates with right params 1`] = `
Array [
  Object {
    "update": Object {
      "_id": "article_testID1_2020-07-15",
      "_index": "analytics",
      "_type": "doc",
    },
  },
  Object {
    "script": Object {
      "id": "analyticsUpsertScript",
      "params": Object {
        "date": "2020-07-15T00:00:00.000+08:00",
        "docId": "testID1",
        "fetchedAt": 2020-01-01T00:00:00.000Z,
        "stats": Object {
          "webUser": 1,
          "webVisit": 2,
        },
        "type": "article",
      },
    },
    "scripted_upsert": true,
    "upsert": Object {},
  },
]
`;

exports[`fetchStatsFromGA processReport without stubbing calls to client should aggregate rows of data 1`] = `
Array [
  Object {
    "_id": "article_testID1_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID1",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 1,
        "webVisit": 2,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID2_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID2",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 2,
        "webVisit": 40,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID3_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID3",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 2,
        "webVisit": 5,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID4_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID4",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 25,
        "webVisit": 69,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID5_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID5",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 46,
        "webVisit": 109,
      },
      "type": "article",
    },
  },
]
`;

exports[`fetchStatsFromGA processReport without stubbing calls to client should aggregate rows of data cross pages 1`] = `
Array [
  Object {
    "_id": "article_testID1_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID1",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 5,
        "webVisit": 20,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID1_2020-07-16",
    "_source": Object {
      "date": "2020-07-16T00:00:00.000+08:00",
      "docId": "testID1",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 1,
        "webVisit": 2,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID2_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID2",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 2,
        "webVisit": 40,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID2_2020-07-16",
    "_source": Object {
      "date": "2020-07-16T00:00:00.000+08:00",
      "docId": "testID2",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 1,
        "webVisit": 2,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID3_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID3",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 2,
        "webVisit": 5,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID4_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID4",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 25,
        "webVisit": 69,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID5_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID5",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 49,
        "webVisit": 115,
      },
      "type": "article",
    },
  },
  Object {
    "_id": "article_testID5_2020-07-16",
    "_source": Object {
      "date": "2020-07-16T00:00:00.000+08:00",
      "docId": "testID5",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 4,
        "webVisit": 10,
      },
      "type": "article",
    },
  },
]
`;

exports[`fetchStatsFromGA processReport without stubbing calls to client should updates docUserId for reply entries that have one 1`] = `
Array [
  Object {
    "_id": "reply_testID1_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docAppId": "test",
      "docId": "testID1",
      "docUserId": "user1",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 1,
        "webVisit": 2,
      },
      "type": "reply",
    },
  },
  Object {
    "_id": "reply_testID2_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docAppId": "test",
      "docId": "testID2",
      "docUserId": "user2",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 2,
        "webVisit": 40,
      },
      "type": "reply",
    },
  },
  Object {
    "_id": "reply_testID3_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID3",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 2,
        "webVisit": 5,
      },
      "type": "reply",
    },
  },
  Object {
    "_id": "reply_testID4_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docAppId": "test",
      "docId": "testID4",
      "docUserId": "user1",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 25,
        "webVisit": 69,
      },
      "type": "reply",
    },
  },
  Object {
    "_id": "reply_testID5_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docAppId": "test",
      "docId": "testID5",
      "docUserId": "user3",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "webUser": 46,
        "webVisit": 109,
      },
      "type": "reply",
    },
  },
]
`;

exports[`fetchStatsFromGA processReport without stubbing calls to client should upserts stats from different sources 1`] = `
Array [
  Object {
    "_id": "article_testID1_2020-07-15",
    "_source": Object {
      "date": "2020-07-15T00:00:00.000+08:00",
      "docId": "testID1",
      "fetchedAt": "2020-01-01T00:00:00.000Z",
      "stats": Object {
        "lineUser": 5,
        "lineVisit": 20,
        "webUser": 1,
        "webVisit": 2,
      },
      "type": "article",
    },
  },
]
`;

exports[`fetchStatsFromGA updateLiffStats calls batchGet by param and handles empty results from GA: batchGet with no params 1`] = `
Array [
  Array [
    Object {
      "requestBody": Object {
        "reportRequests": Array [
          Object {
            "dateRanges": Array [
              Object {
                "endDate": "today",
                "startDate": "today",
              },
            ],
            "dimensions": Array [
              Object {
                "name": "ga:date",
              },
              Object {
                "name": "ga:eventLabel",
              },
              Object {
                "name": "ga:source",
              },
            ],
            "filtersExpression": "ga:eventCategory==LIFF;ga:eventAction==ViewArticle",
            "includeEmptyRows": false,
            "metrics": Array [
              Object {
                "expression": "ga:hits",
              },
              Object {
                "expression": "ga:users",
              },
            ],
            "orderBys": Array [
              Object {
                "fieldName": "ga:date",
              },
              Object {
                "fieldName": "ga:eventLabel",
              },
            ],
            "pageSize": "10000",
            "pageToken": undefined,
            "viewId": "987654321",
          },
        ],
      },
    },
  ],
  Array [
    Object {
      "requestBody": Object {
        "reportRequests": Array [
          Object {
            "dateRanges": Array [
              Object {
                "endDate": "today",
                "startDate": "today",
              },
            ],
            "dimensions": Array [
              Object {
                "name": "ga:date",
              },
              Object {
                "name": "ga:eventLabel",
              },
              Object {
                "name": "ga:source",
              },
            ],
            "filtersExpression": "ga:eventCategory==LIFF;ga:eventAction==ViewReply",
            "includeEmptyRows": false,
            "metrics": Array [
              Object {
                "expression": "ga:hits",
              },
              Object {
                "expression": "ga:users",
              },
            ],
            "orderBys": Array [
              Object {
                "fieldName": "ga:date",
              },
              Object {
                "fieldName": "ga:eventLabel",
              },
            ],
            "pageSize": "10000",
            "pageToken": undefined,
            "viewId": "987654321",
          },
        ],
      },
    },
  ],
]
`;

exports[`fetchStatsFromGA updateLiffStats calls batchGet by param and handles empty results from GA: batchGet with startDate & endDate 1`] = `
Array [
  Array [
    Object {
      "requestBody": Object {
        "reportRequests": Array [
          Object {
            "dateRanges": Array [
              Object {
                "endDate": "2022-12-31",
                "startDate": "2022-12-31",
              },
            ],
            "dimensions": Array [
              Object {
                "name": "ga:date",
              },
              Object {
                "name": "ga:eventLabel",
              },
              Object {
                "name": "ga:source",
              },
            ],
            "filtersExpression": "ga:eventCategory==LIFF;ga:eventAction==ViewArticle",
            "includeEmptyRows": false,
            "metrics": Array [
              Object {
                "expression": "ga:hits",
              },
              Object {
                "expression": "ga:users",
              },
            ],
            "orderBys": Array [
              Object {
                "fieldName": "ga:date",
              },
              Object {
                "fieldName": "ga:eventLabel",
              },
            ],
            "pageSize": "10000",
            "pageToken": undefined,
            "viewId": "987654321",
          },
        ],
      },
    },
  ],
  Array [
    Object {
      "requestBody": Object {
        "reportRequests": Array [
          Object {
            "dateRanges": Array [
              Object {
                "endDate": "2022-12-31",
                "startDate": "2022-12-31",
              },
            ],
            "dimensions": Array [
              Object {
                "name": "ga:date",
              },
              Object {
                "name": "ga:eventLabel",
              },
              Object {
                "name": "ga:source",
              },
            ],
            "filtersExpression": "ga:eventCategory==LIFF;ga:eventAction==ViewReply",
            "includeEmptyRows": false,
            "metrics": Array [
              Object {
                "expression": "ga:hits",
              },
              Object {
                "expression": "ga:users",
              },
            ],
            "orderBys": Array [
              Object {
                "fieldName": "ga:date",
              },
              Object {
                "fieldName": "ga:eventLabel",
              },
            ],
            "pageSize": "10000",
            "pageToken": undefined,
            "viewId": "987654321",
          },
        ],
      },
    },
  ],
]
`;

exports[`fetchStatsFromGA updateLiffStats processes articles and replies: Merged articleId1 1`] = `
Object {
  "date": "2022-01-01T00:00:00.000+08:00",
  "docAppId": "app for articleId1",
  "docId": "articleId1",
  "docUserId": "user for articleId1",
  "fetchedAt": "2022-01-03T00:00:00.000Z",
  "stats": Object {
    "liff": Array [
      Object {
        "source": "utm_source_1",
        "user": 1,
        "visit": 2,
      },
    ],
    "lineUser": 5,
    "lineVisit": 10,
  },
  "type": "article",
}
`;

exports[`fetchStatsFromGA updateLiffStats processes articles and replies: updateDocStats() for 20220101/articleId1 only 1`] = `
Array [
  Object {
    "update": Object {
      "_id": "article_articleId1_2022-01-01",
      "_index": "analytics",
      "_type": "doc",
    },
  },
  Object {
    "script": Object {
      "id": "analyticsUpsertScript",
      "params": Object {
        "date": "2022-01-01T00:00:00.000+08:00",
        "docAppId": "app for articleId1",
        "docId": "articleId1",
        "docUserId": "user for articleId1",
        "fetchedAt": 2022-01-03T00:00:00.000Z,
        "stats": Object {
          "liff": Array [
            Object {
              "source": "utm_source_1",
              "user": 1,
              "visit": 2,
            },
          ],
        },
        "type": "article",
      },
    },
    "scripted_upsert": true,
    "upsert": Object {},
  },
]
`;

exports[`fetchStatsFromGA updateLiffStats processes articles and replies: updateDocStats() for 20220101/articleId2 and 20220102/articleId2 1`] = `
Array [
  Object {
    "update": Object {
      "_id": "article_articleId2_2022-01-01",
      "_index": "analytics",
      "_type": "doc",
    },
  },
  Object {
    "script": Object {
      "id": "analyticsUpsertScript",
      "params": Object {
        "date": "2022-01-01T00:00:00.000+08:00",
        "docId": "articleId2",
        "fetchedAt": 2022-01-03T00:00:00.000Z,
        "stats": Object {
          "liff": Array [
            Object {
              "source": "utm_source_1",
              "user": 2,
              "visit": 3,
            },
            Object {
              "source": "utm_source_2",
              "user": 3,
              "visit": 4,
            },
          ],
        },
        "type": "article",
      },
    },
    "scripted_upsert": true,
    "upsert": Object {},
  },
  Object {
    "update": Object {
      "_id": "article_articleId2_2022-01-02",
      "_index": "analytics",
      "_type": "doc",
    },
  },
  Object {
    "script": Object {
      "id": "analyticsUpsertScript",
      "params": Object {
        "date": "2022-01-02T00:00:00.000+08:00",
        "docId": "articleId2",
        "fetchedAt": 2022-01-03T00:00:00.000Z,
        "stats": Object {
          "liff": Array [
            Object {
              "source": "utm_source_1",
              "user": 4,
              "visit": 5,
            },
          ],
        },
        "type": "article",
      },
    },
    "scripted_upsert": true,
    "upsert": Object {},
  },
]
`;

exports[`fetchStatsFromGA updateLiffStats processes articles and replies: updateDocStats() for 20220101/replyId1 1`] = `
Array [
  Object {
    "update": Object {
      "_id": "reply_replyId1_2022-01-01",
      "_index": "analytics",
      "_type": "doc",
    },
  },
  Object {
    "script": Object {
      "id": "analyticsUpsertScript",
      "params": Object {
        "date": "2022-01-01T00:00:00.000+08:00",
        "docId": "replyId1",
        "fetchedAt": 2022-01-03T00:00:00.000Z,
        "stats": Object {
          "liff": Array [
            Object {
              "source": "utm_source_1",
              "user": 1,
              "visit": 2,
            },
          ],
        },
        "type": "reply",
      },
    },
    "scripted_upsert": true,
    "upsert": Object {},
  },
]
`;

exports[`fetchStatsFromGA updateStats should call right functions with right params: fetchReports calls 1`] = `
Array [
  Array [
    "WEB",
    undefined,
    undefined,
  ],
  Array [
    "LINE",
    undefined,
    undefined,
  ],
]
`;

exports[`fetchStatsFromGA updateStats should call right functions with right params: fetchReports calls with params 1`] = `
Array [
  Array [
    "WEB",
    undefined,
    Object {
      "endDate": "today",
      "startDate": "2020-07-10",
      "useContentGroup": false,
    },
  ],
  Array [
    "LINE",
    undefined,
    Object {
      "endDate": "today",
      "startDate": "2020-07-10",
      "useContentGroup": false,
    },
  ],
]
`;

exports[`fetchStatsFromGA updateStats should call right functions with right params: processReport calls 1`] = `
Array [
  Array [
    "WEB",
    "article",
    Array [
      "test",
    ],
    2020-01-01T00:00:00.000Z,
    undefined,
  ],
  Array [
    "WEB",
    "reply",
    Array [
      "test",
    ],
    2020-01-01T00:00:00.000Z,
    undefined,
  ],
  Array [
    "LINE",
    "article",
    Array [
      "test",
    ],
    2020-01-01T00:00:00.000Z,
    undefined,
  ],
  Array [
    "LINE",
    "reply",
    Array [
      "test",
    ],
    2020-01-01T00:00:00.000Z,
    undefined,
  ],
]
`;

exports[`fetchStatsFromGA updateStats should keep fetching and processing paginated datas until the end: fetchReports calls 1`] = `
Array [
  Array [
    "WEB",
    undefined,
    undefined,
  ],
  Array [
    "WEB",
    Object {
      "article": 100,
      "reply": 100,
    },
    undefined,
  ],
  Array [
    "WEB",
    Object {
      "article": 200,
      "reply": -1,
    },
    undefined,
  ],
  Array [
    "LINE",
    undefined,
    undefined,
  ],
  Array [
    "LINE",
    Object {
      "article": 100,
      "reply": 100,
    },
    undefined,
  ],
  Array [
    "LINE",
    Object {
      "article": -1,
      "reply": 200,
    },
    undefined,
  ],
]
`;

exports[`fetchStatsFromGA updateStats should keep fetching and processing paginated datas until the end: processReport calls 1`] = `
Array [
  Array [
    "WEB",
    "article",
    Array [
      "test0",
    ],
    2020-01-01T00:00:00.000Z,
    undefined,
  ],
  Array [
    "WEB",
    "reply",
    Array [
      "test0",
    ],
    2020-01-01T00:00:00.000Z,
    undefined,
  ],
  Array [
    "WEB",
    "article",
    Array [
      "test1",
    ],
    2020-01-01T00:00:00.000Z,
    Object {
      "docType": "article",
      "path": "test0",
      "sourceType": "WEB",
    },
  ],
  Array [
    "WEB",
    "reply",
    Array [
      "test1",
    ],
    2020-01-01T00:00:00.000Z,
    Object {
      "docType": "reply",
      "path": "test0",
      "sourceType": "WEB",
    },
  ],
  Array [
    "WEB",
    "article",
    Array [
      "test2",
    ],
    2020-01-01T00:00:00.000Z,
    Object {
      "docType": "article",
      "path": "test1",
      "sourceType": "WEB",
    },
  ],
  Array [
    "LINE",
    "article",
    Array [
      "test0",
    ],
    2020-01-01T00:00:00.000Z,
    undefined,
  ],
  Array [
    "LINE",
    "reply",
    Array [
      "test0",
    ],
    2020-01-01T00:00:00.000Z,
    undefined,
  ],
  Array [
    "LINE",
    "article",
    Array [
      "test1",
    ],
    2020-01-01T00:00:00.000Z,
    Object {
      "docType": "article",
      "path": "test0",
      "sourceType": "LINE",
    },
  ],
  Array [
    "LINE",
    "reply",
    Array [
      "test1",
    ],
    2020-01-01T00:00:00.000Z,
    Object {
      "docType": "reply",
      "path": "test0",
      "sourceType": "LINE",
    },
  ],
  Array [
    "LINE",
    "reply",
    Array [
      "test2",
    ],
    2020-01-01T00:00:00.000Z,
    Object {
      "docType": "reply",
      "path": "test1",
      "sourceType": "LINE",
    },
  ],
]
`;
